@@ -373,7 +373,7 @@ static gboolean is_style_php(gint style)
 }
 
 
-gint editor_get_long_line_type(void)
+static gint editor_get_long_line_type(void)
 {
 	if (app->project)
 		switch (app->project->long_line_behaviour)
@@ -393,12 +393,50 @@ gint editor_get_long_line_type(void)
 }
 
 
-gint editor_get_long_line_column(void)
+static gint editor_get_long_line_column(void)
 {
 	if (app->project && app->project->long_line_behaviour != 1 /* use global settings */)
 		return app->project->long_line_column;
 	else
 		return editor_prefs.long_line_global_column;
+}
+
+
+static const GeanyEditorPrefs *
+get_default_prefs(void)
+{
+	static GeanyEditorPrefs eprefs;
+
+	eprefs = editor_prefs;
+
+	/* project overrides */
+	eprefs.indentation = (GeanyIndentPrefs*)editor_get_indent_prefs(NULL);
+	eprefs.long_line_global_type = editor_get_long_line_type();
+	eprefs.long_line_global_column = editor_get_long_line_column();
+	return &eprefs;
+}
+
+
+/* Gets the prefs for the editor.
+ * Prefs can be different according to project or filetype.
+ * @warning Always get a fresh result instead of keeping a pointer to it if the editor/project
+ * settings may have changed, or if this function has been called for a different editor.
+ * @param editor The editor, or @c NULL to get the default prefs.
+ * @return The prefs. */
+const GeanyEditorPrefs *editor_get_prefs(GeanyEditor *editor)
+{
+	static GeanyEditorPrefs eprefs;
+	const GeanyEditorPrefs *dprefs = get_default_prefs();
+
+	/* Return the address of the default prefs to allow returning default and editor
+	 * pref pointers without invalidating the contents of either. */
+	if (editor == NULL)
+		return dprefs;
+
+	eprefs = *dprefs;
+	eprefs.indentation = (GeanyIndentPrefs*)editor_get_indent_prefs(editor);
+	/* add other editor & document overrides as needed */
+	return &eprefs;
 }
 
 
@@ -1136,7 +1174,7 @@ get_default_indent_prefs(void)
 
 
 /** Gets the indentation prefs for the editor.
- * In future, the prefs might be different according to project or filetype.
+ * Prefs can be different according to project or filetype.
  * @warning Always get a fresh result instead of keeping a pointer to it if the editor/project
  * settings may have changed, or if this function has been called for a different editor.
  * @param editor The editor, or @c NULL to get the default indent prefs.
