@@ -2321,16 +2321,17 @@ static void reflow_paragraph(GeanyEditor *editor)
 	ScintillaObject *sci = editor->sci;
 	gboolean sel;
 	gint column = -1;
+	const GeanyEditorPrefs *eprefs = editor_get_prefs(editor);
 
 	if (editor->line_breaking)
 	{
 		/* use line break column if enabled */
-		column = editor_prefs.line_break_column;
+		column = eprefs->line_break_column;
 	}
-	else if (editor_get_long_line_type() != 2)
+	else if (eprefs->long_line_global_type != 2)
 	{
 		/* use long line if enabled */
-		column = editor_get_long_line_column();
+		column = eprefs->long_line_global_column;
 	}
 	else
 	{
