@@ -15,6 +15,10 @@
    doc/geany.html:
    Add gio_unsafe_save_backup hidden pref (patch by Lex Trotman,
    thanks).
+ * src/keybindings.c, src/editor.c, src/editor.h:
+   Add editor_get_prefs() instead of editor_get_long_line_*()
+   functions. This general function can be extended to support
+   various project and document overrides.
 
 
 2010-11-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
